--- a/PS/_CM/T03/morpheus.html
+++ b/PS/_CM/T03/morpheus.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style>
-    body {
-        background-color:#eee;
-        color:#333;
-        font-family:Segoe,Tahoma,Verdana,Arial;
-        font-size:10pt;
-    }
-    th {
-        color:white;
-        font-weight:bold;
-        background-color:black;
-    }
-</style>
+<title>Report for Morpheus</title>
 </head><body>
 <h1>Report for Morpheus</h1>
 <h2>Computer System</h2>
@@ -24,150 +12,20 @@
 <tr><td>BIOSSerial:</td><td>7678-5379-1974-3192-4728-6197-29</td></tr>
 </table>
 
-<h2>Processes</h2>
+<h2>HotFixes</h2>
 <table>
-<colgroup><col/><col/><col/><col/><col/></colgroup>
-<tr><th>Name</th><th>Id</th><th>VM</th><th>PM</th><th>WS</th></tr>
-<tr><td>ApplicationFrameHost</td><td>7192</td><td>2203545513984</td><td>5607424</td><td>26513408</td></tr>
-<tr><td>CcmExec</td><td>5700</td><td>4504821760</td><td>16117760</td><td>41676800</td></tr>
-<tr><td>cmd</td><td>22300</td><td>2203376603136</td><td>2289664</td><td>4194304</td></tr>
-<tr><td>Code</td><td>10948</td><td>2227549032448</td><td>236535808</td><td>58163200</td></tr>
-<tr><td>Code</td><td>11812</td><td>2225286602752</td><td>37142528</td><td>8540160</td></tr>
-<tr><td>Code</td><td>13336</td><td>2220842586112</td><td>11071488</td><td>8495104</td></tr>
-<tr><td>Code</td><td>14608</td><td>2234027028480</td><td>59777024</td><td>45838336</td></tr>
-<tr><td>Code</td><td>20628</td><td>2244863356928</td><td>209444864</td><td>229605376</td></tr>
-<tr><td>Code</td><td>21500</td><td>2220876058624</td><td>13008896</td><td>8548352</td></tr>
-<tr><td>Code</td><td>21932</td><td>2221118513152</td><td>127004672</td><td>61894656</td></tr>
-<tr><td>Code</td><td>22848</td><td>2225366880256</td><td>52203520</td><td>12877824</td></tr>
-<tr><td>Code</td><td>24244</td><td>2225340694528</td><td>25231360</td><td>8593408</td></tr>
-<tr><td>Code</td><td>26936</td><td>2225629020160</td><td>42311680</td><td>38301696</td></tr>
-<tr><td>conhost</td><td>5492</td><td>2203499163648</td><td>3817472</td><td>8540160</td></tr>
-<tr><td>conhost</td><td>8464</td><td>2203469987840</td><td>5341184</td><td>8491008</td></tr>
-<tr><td>conhost</td><td>8936</td><td>2203470278656</td><td>3751936</td><td>8544256</td></tr>
-<tr><td>conhost</td><td>19116</td><td>2203470000128</td><td>5718016</td><td>8548352</td></tr>
-<tr><td>csrss</td><td>544</td><td>2203413303296</td><td>2617344</td><td>6004736</td></tr>
-<tr><td>csrss</td><td>628</td><td>2203401957376</td><td>1822720</td><td>5070848</td></tr>
-<tr><td>csrss</td><td>2652</td><td>2203451252736</td><td>3743744</td><td>7417856</td></tr>
-<tr><td>ctfmon</td><td>1204</td><td>2203457933312</td><td>4296704</td><td>17072128</td></tr>
-<tr><td>dllhost</td><td>3936</td><td>2203481677824</td><td>3293184</td><td>28753920</td></tr>
-<tr><td>dllhost</td><td>25832</td><td>2203501277184</td><td>4042752</td><td>29659136</td></tr>
-<tr><td>dwm</td><td>1052</td><td>2203532132352</td><td>17399808</td><td>39628800</td></tr>
-<tr><td>dwm</td><td>7628</td><td>2203642073088</td><td>37220352</td><td>106700800</td></tr>
-<tr><td>explorer</td><td>22156</td><td>2203905835008</td><td>56430592</td><td>175337472</td></tr>
-<tr><td>fontdrvhost</td><td>960</td><td>2203415691264</td><td>1765376</td><td>4235264</td></tr>
-<tr><td>fontdrvhost</td><td>968</td><td>2203414310912</td><td>1622016</td><td>4046848</td></tr>
-<tr><td>fontdrvhost</td><td>6152</td><td>2203571277824</td><td>5558272</td><td>11386880</td></tr>
-<tr><td>FoxitPDFReaderUpdateService</td><td>3300</td><td>53792768</td><td>1716224</td><td>8523776</td></tr>
-<tr><td>Idle</td><td>0</td><td>8192</td><td>57344</td><td>8192</td></tr>
-<tr><td>LogonUI</td><td>568</td><td>2203643834368</td><td>11898880</td><td>45256704</td></tr>
-<tr><td>lsass</td><td>784</td><td>2203434012672</td><td>16519168</td><td>29929472</td></tr>
-<tr><td>msdtc</td><td>4780</td><td>2203405901824</td><td>3022848</td><td>10780672</td></tr>
-<tr><td>MsDtsSrvr</td><td>4000</td><td>22940098560</td><td>56360960</td><td>23658496</td></tr>
-<tr><td>MsMpEng</td><td>3136</td><td>2204004061184</td><td>292073472</td><td>213532672</td></tr>
-<tr><td>MsSense</td><td>2424</td><td>2203710271488</td><td>137633792</td><td>176607232</td></tr>
-<tr><td>notepad++</td><td>14404</td><td>4530925568</td><td>17723392</td><td>8572928</td></tr>
-<tr><td>OfficeClickToRun</td><td>3308</td><td>2203609284608</td><td>45289472</td><td>74563584</td></tr>
-<tr><td>pwsh</td><td>6200</td><td>2481002438656</td><td>31600640</td><td>8556544</td></tr>
-<tr><td>pwsh</td><td>13708</td><td>2481002569728</td><td>31109120</td><td>8548352</td></tr>
-<tr><td>pwsh</td><td>14844</td><td>2481245585408</td><td>304623616</td><td>138702848</td></tr>
-<tr><td>rdpclip</td><td>6204</td><td>2203481780224</td><td>3686400</td><td>23011328</td></tr>
-<tr><td>rdpinput</td><td>23084</td><td>2203410841600</td><td>1740800</td><td>7385088</td></tr>
-<tr><td>Registry</td><td>96</td><td>275185664</td><td>1560576</td><td>261595136</td></tr>
-<tr><td>RuntimeBroker</td><td>1320</td><td>2203583655936</td><td>42151936</td><td>70762496</td></tr>
-<tr><td>RuntimeBroker</td><td>4452</td><td>2203556077568</td><td>9068544</td><td>31535104</td></tr>
-<tr><td>RuntimeBroker</td><td>7132</td><td>2203484442624</td><td>8515584</td><td>24444928</td></tr>
-<tr><td>SDXHelper</td><td>6752</td><td>2203571126272</td><td>26619904</td><td>21532672</td></tr>
-<tr><td>SearchUI</td><td>18264</td><td>2238612652032</td><td>94154752</td><td>168955904</td></tr>
-<tr><td>SecurityHealthService</td><td>1628</td><td>2203436793856</td><td>3903488</td><td>14430208</td></tr>
-<tr><td>SenseNdr</td><td>4164</td><td>4450828288</td><td>31625216</td><td>37072896</td></tr>
-<tr><td>services</td><td>764</td><td>2203405905920</td><td>9379840</td><td>17498112</td></tr>
-<tr><td>SgrmBroker</td><td>3128</td><td>2203375886336</td><td>5029888</td><td>7720960</td></tr>
-<tr><td>ShellExperienceHost</td><td>704</td><td>2203694026752</td><td>33611776</td><td>82522112</td></tr>
-<tr><td>sihost</td><td>7252</td><td>2203489599488</td><td>7213056</td><td>30322688</td></tr>
-<tr><td>smartscreen</td><td>9092</td><td>2203425640448</td><td>2736128</td><td>9043968</td></tr>
-<tr><td>smss</td><td>408</td><td>2203358658560</td><td>516096</td><td>1224704</td></tr>
-<tr><td>sqlceip</td><td>4008</td><td>4934733824</td><td>35143680</td><td>48959488</td></tr>
-<tr><td>sqlwriter</td><td>3144</td><td>4376088576</td><td>1982464</td><td>8257536</td></tr>
-<tr><td>svchost</td><td>8</td><td>2203483086848</td><td>24739840</td><td>61464576</td></tr>
-<tr><td>svchost</td><td>464</td><td>2203412619264</td><td>10133504</td><td>28827648</td></tr>
-<tr><td>svchost</td><td>612</td><td>2203402887168</td><td>4894720</td><td>23552000</td></tr>
-<tr><td>svchost</td><td>912</td><td>2203373805568</td><td>937984</td><td>11431936</td></tr>
-<tr><td>svchost</td><td>932</td><td>2203436728320</td><td>9347072</td><td>42713088</td></tr>
-<tr><td>svchost</td><td>1060</td><td>2203583389696</td><td>9277440</td><td>39751680</td></tr>
-<tr><td>svchost</td><td>1112</td><td>2203845316608</td><td>108998656</td><td>179838976</td></tr>
-<tr><td>svchost</td><td>1140</td><td>2203397259264</td><td>2334720</td><td>23736320</td></tr>
-<tr><td>svchost</td><td>1168</td><td>2203392180224</td><td>2293760</td><td>17747968</td></tr>
-<tr><td>svchost</td><td>1176</td><td>2203393204224</td><td>5533696</td><td>18096128</td></tr>
-<tr><td>svchost</td><td>1188</td><td>2203391664128</td><td>1851392</td><td>18169856</td></tr>
-<tr><td>svchost</td><td>1236</td><td>2203504611328</td><td>7307264</td><td>71081984</td></tr>
-<tr><td>svchost</td><td>1280</td><td>2203391160320</td><td>2662400</td><td>18636800</td></tr>
-<tr><td>svchost</td><td>1296</td><td>2203402309632</td><td>2248704</td><td>23846912</td></tr>
-<tr><td>svchost</td><td>1368</td><td>2203404099584</td><td>3948544</td><td>19795968</td></tr>
-<tr><td>svchost</td><td>1384</td><td>2203403440128</td><td>2912256</td><td>24784896</td></tr>
-<tr><td>svchost</td><td>1400</td><td>2203400601600</td><td>2588672</td><td>19767296</td></tr>
-<tr><td>svchost</td><td>1408</td><td>2203388260352</td><td>1593344</td><td>16973824</td></tr>
-<tr><td>svchost</td><td>1420</td><td>2203388252160</td><td>1568768</td><td>16941056</td></tr>
-<tr><td>svchost</td><td>1476</td><td>2203388256256</td><td>1536000</td><td>16941056</td></tr>
-<tr><td>svchost</td><td>1512</td><td>2203387191296</td><td>1634304</td><td>16437248</td></tr>
-<tr><td>svchost</td><td>1608</td><td>2203432865792</td><td>20901888</td><td>37081088</td></tr>
-<tr><td>svchost</td><td>1748</td><td>2203392991232</td><td>1708032</td><td>15241216</td></tr>
-<tr><td>svchost</td><td>1796</td><td>2203546120192</td><td>6283264</td><td>26468352</td></tr>
-<tr><td>svchost</td><td>1848</td><td>2203430125568</td><td>12816384</td><td>35856384</td></tr>
-<tr><td>svchost</td><td>1936</td><td>2203407134720</td><td>5111808</td><td>27090944</td></tr>
-<tr><td>svchost</td><td>1992</td><td>2203403763712</td><td>3854336</td><td>26722304</td></tr>
-<tr><td>svchost</td><td>2000</td><td>2203389734912</td><td>1576960</td><td>14970880</td></tr>
-<tr><td>svchost</td><td>2008</td><td>2203433705472</td><td>3284992</td><td>37781504</td></tr>
-<tr><td>svchost</td><td>2016</td><td>2203395510272</td><td>2461696</td><td>18989056</td></tr>
-<tr><td>svchost</td><td>2068</td><td>2203396743168</td><td>2514944</td><td>21254144</td></tr>
-<tr><td>svchost</td><td>2132</td><td>2203398848512</td><td>5206016</td><td>22278144</td></tr>
-<tr><td>svchost</td><td>2148</td><td>2203437293568</td><td>6197248</td><td>38744064</td></tr>
-<tr><td>svchost</td><td>2168</td><td>2203397074944</td><td>2113536</td><td>19771392</td></tr>
-<tr><td>svchost</td><td>2232</td><td>2203391741952</td><td>1974272</td><td>18362368</td></tr>
-<tr><td>svchost</td><td>2352</td><td>2203403456512</td><td>2023424</td><td>24084480</td></tr>
-<tr><td>svchost</td><td>2452</td><td>2203392667648</td><td>3162112</td><td>18812928</td></tr>
-<tr><td>svchost</td><td>2484</td><td>2203433484288</td><td>3665920</td><td>32133120</td></tr>
-<tr><td>svchost</td><td>2504</td><td>2203456249856</td><td>16752640</td><td>58376192</td></tr>
-<tr><td>svchost</td><td>2512</td><td>2203432161280</td><td>2502656</td><td>20492288</td></tr>
-<tr><td>svchost</td><td>2528</td><td>2203386990592</td><td>1818624</td><td>16601088</td></tr>
-<tr><td>svchost</td><td>2552</td><td>2203395260416</td><td>1654784</td><td>19922944</td></tr>
-<tr><td>svchost</td><td>2560</td><td>2203446550528</td><td>5021696</td><td>50302976</td></tr>
-<tr><td>svchost</td><td>2576</td><td>2203384647680</td><td>1384448</td><td>14622720</td></tr>
-<tr><td>svchost</td><td>2620</td><td>2203454140416</td><td>25055232</td><td>46325760</td></tr>
-<tr><td>svchost</td><td>2796</td><td>2203826049024</td><td>29196288</td><td>53829632</td></tr>
-<tr><td>svchost</td><td>2840</td><td>2203398623232</td><td>3055616</td><td>22134784</td></tr>
-<tr><td>svchost</td><td>2880</td><td>2203409281024</td><td>4096000</td><td>25812992</td></tr>
-<tr><td>svchost</td><td>2904</td><td>2203396337664</td><td>2265088</td><td>19861504</td></tr>
-<tr><td>svchost</td><td>2936</td><td>2203406004224</td><td>3362816</td><td>26091520</td></tr>
-<tr><td>svchost</td><td>3016</td><td>2203438374912</td><td>2813952</td><td>37695488</td></tr>
-<tr><td>svchost</td><td>3088</td><td>2207682953216</td><td>1761280</td><td>16760832</td></tr>
-<tr><td>svchost</td><td>3096</td><td>2203382489088</td><td>1703936</td><td>17620992</td></tr>
-<tr><td>svchost</td><td>3112</td><td>2203394969600</td><td>2666496</td><td>19488768</td></tr>
-<tr><td>svchost</td><td>3584</td><td>2203389644800</td><td>2486272</td><td>19681280</td></tr>
-<tr><td>svchost</td><td>3660</td><td>2203445047296</td><td>6479872</td><td>42446848</td></tr>
-<tr><td>svchost</td><td>4388</td><td>2203424071680</td><td>3174400</td><td>39489536</td></tr>
-<tr><td>svchost</td><td>4492</td><td>2203406401536</td><td>2232320</td><td>27897856</td></tr>
-<tr><td>svchost</td><td>5020</td><td>2203428388864</td><td>6107136</td><td>41148416</td></tr>
-<tr><td>svchost</td><td>5064</td><td>2203402698752</td><td>5423104</td><td>25047040</td></tr>
-<tr><td>svchost</td><td>5456</td><td>2203383943168</td><td>1384448</td><td>15257600</td></tr>
-<tr><td>svchost</td><td>5768</td><td>2203460358144</td><td>24567808</td><td>43819008</td></tr>
-<tr><td>svchost</td><td>5956</td><td>2203434246144</td><td>11595776</td><td>26730496</td></tr>
-<tr><td>svchost</td><td>6988</td><td>2203396509696</td><td>1683456</td><td>21299200</td></tr>
-<tr><td>svchost</td><td>7760</td><td>2203425038336</td><td>4628480</td><td>35545088</td></tr>
-<tr><td>System</td><td>4</td><td>3915776</td><td>196608</td><td>163840</td></tr>
-<tr><td>TabTip</td><td>1652</td><td>2203499880448</td><td>4468736</td><td>18878464</td></tr>
-<tr><td>TabTip32</td><td>2480</td><td>82673664</td><td>1388544</td><td>5238784</td></tr>
-<tr><td>taskhostw</td><td>5880</td><td>2203514335232</td><td>6594560</td><td>17297408</td></tr>
-<tr><td>VSSVC</td><td>1892</td><td>2203395944448</td><td>1925120</td><td>9089024</td></tr>
-<tr><td>wininit</td><td>620</td><td>2203388157952</td><td>1642496</td><td>7458816</td></tr>
-<tr><td>winlogon</td><td>692</td><td>2203416870912</td><td>2449408</td><td>10682368</td></tr>
-<tr><td>winlogon</td><td>4924</td><td>2203444678656</td><td>3391488</td><td>25268224</td></tr>
-<tr><td>winpty-agent</td><td>12816</td><td>4411924480</td><td>2867200</td><td>7606272</td></tr>
-<tr><td>winpty-agent</td><td>18692</td><td>4411924480</td><td>2260992</td><td>6979584</td></tr>
-<tr><td>winpty-agent</td><td>20788</td><td>4410875904</td><td>2199552</td><td>6926336</td></tr>
-<tr><td>WmiPrvSE</td><td>1220</td><td>2203406741504</td><td>6090752</td><td>15134720</td></tr>
-<tr><td>WmiPrvSE</td><td>1556</td><td>2203392966656</td><td>2568192</td><td>9072640</td></tr>
-<tr><td>WmiPrvSE</td><td>5840</td><td>2203404759040</td><td>4214784</td><td>10899456</td></tr>
-<tr><td>WmiPrvSE</td><td>25004</td><td>2203468476416</td><td>14557184</td><td>27566080</td></tr>
+<colgroup><col/><col/><col/></colgroup>
+<tr><th>Description</th><th>HotFixID</th><th>InstalledOn</th></tr>
+<tr><td>Security Update</td><td>KB4512577</td><td>9/13/2019 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4512937</td><td>8/14/2019 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4504369</td><td>6/12/2019 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4499728</td><td>5/17/2019 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4493510</td><td>4/11/2019 12:00:00 AM</td></tr>
+<tr><td>Update</td><td>KB4480056</td><td>1/10/2019 12:00:00 AM</td></tr>
+<tr><td>Update</td><td>KB4470502</td><td>12/12/2018 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4470788</td><td>12/9/2018 12:00:00 AM</td></tr>
+<tr><td>Update</td><td>KB4469041</td><td>12/9/2018 12:00:00 AM</td></tr>
+<tr><td>Security Update</td><td>KB4465664</td><td>11/28/2018 12:00:00 AM</td></tr>
 </table>
 
 <table>
