--- a/PS/_CM/T03/morpheus.html
+++ b/PS/_CM/T03/morpheus.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Report for Morpheus</title>
+<style>
+    body {
+        background-color:#eee;
+        color:#333;
+        font-family:Segoe,Tahoma,Verdana,Arial;
+        font-size:10pt;
+    }
+    th {
+        color:white;
+        font-weight:bold;
+        background-color:black;
+    }
+</style>
 </head><body>
 <h1>Report for Morpheus</h1>
 <h2>Computer System</h2>
