--- a/PS/_CM/T06/dsc/HRSite/index.htm
+++ b/PS/_CM/T06/dsc/HRSite/index.htm
@@ -8,4 +8,4 @@
 </head>
 
 <p class="auto-style1">
-<img alt="" height="410" src="JohnSavillsPSMC.jpg" width="500"></p>
+<img alt="" height="410" src="HRPSMC.jpg" width="500"></p>
